Fix dark mode URL add input color

--- a/app/Resources/static/themes/material/css/dark_theme.scss
+++ b/app/Resources/static/themes/material/css/dark_theme.scss
@@ -135,6 +135,11 @@
     color: #abb2bf;
   }
 
+  .input-field.nav-panel-add.disabled,
+  .input-field.nav-panel-add.disabled input {
+    background-color: transparent;
+  }
+
   @media only screen and (min-width: 992px) {
     #article {
       background-color: #101010;
